# BARN

./: .clang-format  .flake8  .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml
docs/: roadmap.md  robot_interface.md
docs/architecture/: classical.md  e2e_rl.md  hybrid.md  overview.md
docs/benchmark/: barn_2026_contract.md  failure_taxonomy.md  metric_notes.md
docs/decisions/: 0001-mixed-cpp-python-workspace.md  0002-evaluator-not-vendored.md  0003-configurable-cmd-vel-type.md
docs/features/: classical_mpc_updates.md  configuration_guide.md  dynabarn_dynamic_obstacles.md
docs/media/: README.md
docs/setup/: barn_2026_jazzy_distrobox.md
docs/tutorials/: 00-the-barn-problem.md  01-the-robot-and-its-senses.md  02-mapping-occupancy-and-distance-fields.md  03-global-planning-with-a-star.md  04-local-planning-and-mpc.md  05-the-safety-shield.md  06-recovery-and-backtracking.md  07-the-system-as-a-whole.md  08-measuring-success.md  README.md  references.md
evaluation/: README.md  experiment.example.yaml
evaluation/metrics/: _common.py  barn2026_metric.py  upstream_compat_metric.py
evaluation/schemas/: experiment.schema.yaml  result_record.schema.json
evaluation/scripts/: run_dev_suite.sh  (+3 more)
infra/: README.md
learning/: README.md  requirements.txt
learning/barn_rl_train/: pyproject.toml
learning/barn_rl_train/barn_rl_train/: __init__.py  config.py  env.py  export_onnx.py  policy.py  train.py
learning/barn_rl_train/configs/: ppo_barn.yaml
models/: README.md
patches/: README.md  barn_eval_launch_navigation_stack.patch  pinned_commit.txt
results/: .gitignore  README.md
ros2_ws/src/barn_bringup/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/barn_bringup/config/: classical.yaml  classical_mpc.yaml  common.yaml  e2e_rl.yaml  hybrid.yaml
ros2_ws/src/barn_bringup/launch/: barn_navigation.launch.py  classical_mpc.launch.py  classical_mpc_dynamic.launch.py  e2e_rl.launch.py  hybrid.launch.py  slice_classical.launch.py
ros2_ws/src/barn_bringup/rviz/: barn.rviz
ros2_ws/src/barn_classical/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/barn_classical/config/: goal_seeker.yaml
ros2_ws/src/barn_classical/include/barn_classical/: classical_mpc_node.hpp  collision_checker.hpp  controller.hpp  global_planner_astar.hpp  goal_seeker.hpp  goal_seeker_node.hpp  local_planner.hpp  path_validator.hpp  recovery.hpp
ros2_ws/src/barn_classical/src/: classical_mpc_node.cpp  collision_checker.cpp  controller.cpp  global_planner_astar.cpp  goal_seeker_node.cpp  local_planner.cpp  path_validator.cpp  recovery.cpp
ros2_ws/src/barn_classical/test/: test_classical_pipeline.cpp  test_goal_seeker_math.cpp
ros2_ws/src/barn_core/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/barn_core/include/barn_core/: distance_field.hpp  geometry.hpp  logodds.hpp  occupancy.hpp  scan.hpp  types.hpp
ros2_ws/src/barn_core/src/: distance_field.cpp  geometry.cpp  occupancy.cpp  scan.cpp
ros2_ws/src/barn_core/test/: test_distance_field.cpp  test_geometry.cpp  test_scan.cpp
ros2_ws/src/barn_dynamic_tracking/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/barn_dynamic_tracking/config/: tracking.yaml
ros2_ws/src/barn_dynamic_tracking/include/barn_dynamic_tracking/: association.hpp  clustering.hpp  kalman.hpp  tracker_node.hpp  ttc.hpp
ros2_ws/src/barn_dynamic_tracking/src/: association.cpp  clustering.cpp  kalman.cpp  tracker_node.cpp  ttc.cpp
ros2_ws/src/barn_dynamic_tracking/test/: test_clustering.cpp  test_kalman.cpp
ros2_ws/src/barn_goal_adapter/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/barn_goal_adapter/include/barn_goal_adapter/: goal_adapter_node.hpp  goal_conversions.hpp
ros2_ws/src/barn_goal_adapter/src/: goal_adapter_node.cpp
ros2_ws/src/barn_goal_adapter/test/: test_goal_extract.cpp
ros2_ws/src/barn_hybrid/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/barn_hybrid/barn_hybrid/: __init__.py  fusion.py  hybrid_node.py  risk_gate.py
ros2_ws/src/barn_hybrid/config/: hybrid.yaml
ros2_ws/src/barn_hybrid/test/: test_fusion.py
ros2_ws/src/barn_mapping/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/barn_mapping/config/: mapping.yaml
ros2_ws/src/barn_mapping/include/barn_mapping/: mapping_node.hpp  ray_integrator.hpp
ros2_ws/src/barn_mapping/src/: mapping_node.cpp  ray_integrator.cpp
ros2_ws/src/barn_mapping/test/: test_logodds.cpp
ros2_ws/src/barn_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/barn_msgs/msg/: ObstacleTrack.msg  ObstacleTrackArray.msg
ros2_ws/src/barn_rl_runtime/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/barn_rl_runtime/barn_rl_runtime/: __init__.py  action_scale.py  model_loader.py  normalization.py  observation.py  rl_runtime_node.py
ros2_ws/src/barn_rl_runtime/config/: rl_runtime.yaml
ros2_ws/src/barn_rl_runtime/test/: test_action_scale.py
ros2_ws/src/barn_robot_adapter/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/barn_robot_adapter/config/: robot_adapter.yaml
ros2_ws/src/barn_robot_adapter/include/barn_robot_adapter/: conversions.hpp  robot_adapter_node.hpp
ros2_ws/src/barn_robot_adapter/src/: conversions.cpp  robot_adapter_node.cpp
ros2_ws/src/barn_robot_adapter/test/: test_conversions.cpp
ros2_ws/src/barn_safety/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/barn_safety/config/: safety.yaml
ros2_ws/src/barn_safety/include/barn_safety/: limiter.hpp  safety_node.hpp  swept_footprint_shield.hpp
ros2_ws/src/barn_safety/src/: limiter.cpp  safety_node.cpp  swept_footprint_shield.cpp
ros2_ws/src/barn_safety/test/: test_limiter.cpp  test_swept_footprint_shield.cpp
simulation/barn_dynamic_obstacle/: CMakeLists.txt  README.md
simulation/barn_dynamic_obstacle/src/: DynamicObstacle.cc
simulation/barn_dynamic_obstacle/worlds/: moving_cylinder_demo.sdf
site/: index.html
tests/: README.md
tools/: analyze_recovery_trace.py  configure_barn_eval_dispatch.py  format.sh  generate_dynabarn_worlds.py  preflight_barn_campaign.sh  record_recovery_trace.py  setup_barn_eval.sh  setup_dynabarn.sh  setup_workspace.sh
(+21 files in other folders)
