[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "barn_rl_train"
version = "0.1.0"
description = "Offline RL training for BARN navigation policies (Track B/C)."
readme = "../README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "pyyaml",
]

# Heavy training/export deps are optional so the scaffold imports without them.
[project.optional-dependencies]
train = [
  "gymnasium",
  "numpy",
  "stable-baselines3",
  "torch",
]
export = [
  "onnx",
  "onnxruntime",
]

[project.scripts]
barn-train = "barn_rl_train.train:main"
barn-export-onnx = "barn_rl_train.export_onnx:main"

[tool.setuptools.packages.find]
include = ["barn_rl_train*"]
