<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>barn_core</name>
  <version>0.1.0</version>
  <description>
    Pure, dependency-free navigation types and math (Pose2D, Goal2D, velocity
    commands, scan queries, log-odds occupancy grid) shared by every BARN track.
    Contains no rclcpp, ROS message, or Gazebo dependency by design.
  </description>
  <maintainer email="muztahid.appbaksho@gmail.com">barn-2027-prep contributors</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
