<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>barn_mapping</name>
  <version>0.1.0</version>
  <description>
    Online LiDAR log-odds occupancy mapping and Euclidean distance field in the
    odom frame, built exclusively from competition-legal sensor data.
  </description>
  <maintainer email="muztahid.appbaksho@gmail.com">barn-2027-prep contributors</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>barn_core</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
